--- a/nodejs/nodejs-UDP-template/public/style.css
+++ b/nodejs/nodejs-UDP-template/public/style.css
@@ -1,33 +1,63 @@
-*{
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    height:100vh;
-    width:100vw;
-    overflow:hidden;
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+.ipContainer {
+  width: 100%;
+  text-align: center;
 }
 
-.page{
-    position:fixed;
-    top:0;
-    left:100vw;
-    height:100vh;
-    width:100vw;
+#list {
+  padding: 2rem;
+  text-align: center;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  background-color: lightblue;
+  display: grid;
 
-    display:grid;
-    place-items:center;
-    padding:2rem;
-
-    transition: .5s ease-in-out;
-    transition-delay: .5s;
-
-    background-color:aliceblue;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  grid-auto-flow: column;
 }
 
-.show{
-    left:0;
-    transition: .5s ease-in-out;
+#list p {
+  text-align: center;
+  text-justify: auto;
+  font-size: x-large;
+}
+
+.fade {
+  color: rgba(0, 0, 0, 0);
+  transition: 0.5s ease-in;
+}
+
+.page {
+  position: fixed;
+  top: 0;
+  left: 100vw;
+  height: 100vh;
+  width: 100vw;
+
+  display: grid;
+  place-items: center;
+  grid-template-rows: 1fr 10fr;
+  padding: 2rem;
+
+  transition: 0.5s ease-in-out;
+  transition-delay: 0.5s;
+
+  background-color: aliceblue;
+}
+
+.show {
+  left: 0;
+  transition: 0.5s ease-in-out;
 }
