--- a/p5js/app-p5-skabelon/style.css
+++ b/p5js/app-p5-skabelon/style.css
@@ -21,6 +21,9 @@ body{
     place-items:center;
     padding:2rem;
 
+    border: 1px solid gray;
+    background-color: lightgray;
+
     transition: .5s ease-in-out;
     transition-delay: .5s;
 
