--- a/p5js/polyhedron_mqtt_receiver/style.css
+++ b/p5js/polyhedron_mqtt_receiver/style.css
@@ -6,6 +6,10 @@
 .shadowbox, .shadowboxToo{
     width:40rem;
     height:40rem;
+    display:grid;
+    place-items:center;
+    color:whitesmoke;
+    font-size: 2em;
     background:rgba(255, 255, 255, .1);
     border-radius: 4rem;
     padding:4rem;
@@ -17,6 +21,12 @@
 }
 .shadowboxToo{
     animation: movemeToo infinite 14s;
+}
+
+.fadeAway{
+    transition: all 12s ease-in-out;
+    margin-left: -100vw;
+    margin-right: 100vw;
 }
 
 @keyframes moveme {
@@ -81,7 +91,7 @@
 }
 
 .page p {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .page .vid {
@@ -95,7 +105,7 @@
 .page .textbox {
     background: rgba(255, 255, 255, .7);
     border-radius: 4rem;
-    padding: 4rem;
+    padding: 4rem 12rem;
     border: 1px solid white;
     box-shadow:
     0 1px 1px hsl(0deg 0% 0% / 0.075),
@@ -146,7 +156,6 @@
 }
 #page11 {
     background-color: black;
-    color: white;
 }
 
 h1 {
