--- a/p5js/kmg-controller/style.css
+++ b/p5js/kmg-controller/style.css
@@ -10,6 +10,16 @@
     bottom:1rem;
     z-index:10;
     cursor: pointer;
+    width:3rem;
+    height:3rem;
+    background-color: black;
+    border-radius:50%;
+    display:grid;
+    place-items:center;
+    color:white;
+    font-size:1.5rem;
+    border:1px solid whitesmoke;
+
 }
 
 .page{
@@ -19,6 +29,10 @@
     width:100vw;
     display:grid;
     transition: 0.3s 0.3s all ease-in-out;
+    place-items:center;
+    overflow-y: auto;
+    padding:1rem;
+    height:100vh;
 }
 
 .control_button{
