--- a/p5js/kmg-controller/style.css
+++ b/p5js/kmg-controller/style.css
@@ -19,7 +19,15 @@
     color:white;
     font-size:1.5rem;
     border:1px solid whitesmoke;
+}
 
+#reload img{
+    width:2rem;
+    height:2rem;
+}
+#reload:hover{
+    background-color: #228B22;
+    transition: 0.3s all ease-in-out;
 }
 
 .page{
@@ -82,4 +90,42 @@ h1{
 #hint{
     font-size:3rem;
     color:whitesmoke;
+}
+
+/* Ensure full width and scrollable for mobile */
+body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+@media (max-width: 768px) {
+    body{
+        margin:0;
+        padding:0;
+    }
+    .page {
+        width: 100%;
+        height: auto;
+        overflow-y: auto;
+        padding: 0;
+    }
+
+    .control_button {
+        width: 100vw; /* Ensure buttons span the full viewport width */
+        height: 8rem; /* Adjust button height for smaller screens */
+        font-size: 2rem; /* Adjust font size for better readability */
+        border-radius: 0; /* Remove border radius */
+        margin: 0; /* Remove any margin */
+        padding: 0; /* Remove any padding */
+    }
+
+    h1 {
+        font-size: 2rem; /* Adjust heading size for mobile */
+    }
+
+    #hint {
+        font-size: 2rem; /* Adjust hint size for mobile */
+    }
 }
